Add external storage sync APIs

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "transfer": "node ./lib/transfer.js",
     "transfer_logs": "node ./lib/transfer_logs.js",
     "transfer_events": "node ./lib/transfer_events.js",
-    "delete": "node ./lib/delete.js"
+    "delete": "node ./lib/delete.js",
+    "calculate_single_hash": "node ./lib/calculate_single_hash.js",
+    "calculate_all_hashes": "node ./lib/calculate_all_hashes.js"
   },
   "keywords": [],
   "author": "",
